# graduate_work

./: .env_example  Makefile  README.md  docker-compose.yml  example.env
admin/: .env_example  Dockerfile  docker-compose.yml  requirements.txt
admin/config/: nginx.conf
admin/django_project/billing/: admin.py  apps.py  models.py
admin/django_project/config/: settings.py  urls.py
admin/django_project/movies/: admin.py  models.py
admin/django_project/users/: auth.py  models.py
auth/: .env_example  Dockerfile  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  start.sh
auth/config/: nginx.conf
auth/src/: main.py
auth/src/api/v1/: auth.py  roles.py  users.py
auth/src/core/: config.py  exceptions.py
auth/src/db/: postgres.py  redis_db.py
auth/src/migrations/: env.py
auth/src/migrations/versions/: 4523b79517b2_add_roles_to_users.py  80f6f9179f43_add_subscribe_field.py  8c0cf6be75b4_add_roles.py  9a061e6c182b_add_history_and_auth_models.py  b2d851ea29fd_first_migrate.py  cadbccdbd166_add_subscription_column.py
auth/src/models/: history.py  roles.py  tokens.py  users.py
auth/src/schemas/: histories.py  roles.py  tokens.py  users.py  validators.py
auth/src/services/: auth.py  common.py  roles.py  tokens.py  users.py
auth/src/tests/: test_auth.py  test_roles.py  test_users.py
auth/src/tests/fixtures/: all.py
billing-api/: Dockerfile  alembic.ini  requirements.txt
billing-api/src/: main.py  tasks.py
billing-api/src/api/: healthcheck.py
config/: nginx.conf
diagrams/: as_is.puml  billing_service_pipeline.puml  to_be.puml
(+48 files in other folders)
